# canopen

examples/: simple_ds402_node.py
examples/eds/: cia402_slave.eds
xiaoyu_motor_node/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
xiaoyu_motor_node/msg/: .keep
xiaoyu_motor_node/resource/: xiaoyu_motor_node
xiaoyu_motor_node/srv/: .keep  COHeartbeatID.srv  FirmwareUpdate.srv
xiaoyu_motor_node/xiaoyu_motor_node/: motor_node.py
